@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-20T01:22:35Z",
-  "count" : 5,
-  "count_minmax" : [ 3, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 3, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "timestamp" : "2022-12-03T08:16:09Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 5 ],
+  "count_decinc" : [ -3, +5 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 4 ],
+  "uniques_decinc" : [ -3, +4 ]
 }
