@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-12-03T01:03:22Z",
+  "timestamp" : "2022-12-03T08:16:09Z",
   "count_outdated" : 688,
   "uniques_outdated" : 388,
-  "count" : 716,
-  "uniques" : 402,
+  "count" : 713,
+  "uniques" : 399,
   "clones" : [
     {
       "timestamp": "2022-11-19T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 3, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ]
+      "count": 2,
+      "count_minmax": [ 2, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 4 ]
     },
     {
       "timestamp": "2022-11-20T00:00:00Z",
