@@ -1,11 +1,11 @@
 {
-  "count": 28,
-  "uniques": 7,
+  "count": 25,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-11-19T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-11-20T00:00:00Z",
