@@ -1,3 +1,11 @@
+2022-12-03T08:16:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3607701025 # 1084
+* notice: last 14d: unq all: 4 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 388 688 / 402 716
+* notice: next accum: outdated-unq outdated-all / unq all: 388 688 / 399 713
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -3 / +4 +5 -3 -3 / 1 2
+* notice: removed / changed dates: [] / [2022-11-19]
+
 2022-12-03T01:03:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3606242803 # 1083
 * notice: last 14d: unq all: 7 28
